# CrazyGuy

./: README.md
app/: build.gradle
app/src/androidTest/java/com/charles/crazyguy/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-ffmpeg.cpp  native-lib.cpp
app/src/main/cpp/header/: native-ffmpeg.h
app/src/main/java/com/charles/crazyguy/: CrazyGuyActivity.java  CrazyGuyApplication.java
app/src/main/java/com/charles/crazyguy/activities/: BaseActivity.java  CustomGradientActivity.java  DragBarActivity.java  PlayVideoActivity.java  SurfaceActivity.java  SurfaceDemoActivity.java
app/src/main/java/com/charles/crazyguy/adapter/: VideoListAdapter.java
app/src/main/java/com/charles/crazyguy/common/: Action.java
app/src/main/java/com/charles/crazyguy/dto/: MenuItem.java  VideoItem.java
app/src/main/java/com/charles/crazyguy/fake/: MenuFake.java
app/src/main/java/com/charles/crazyguy/menu/: MenuContract.java  MenuPresenter.java  MenuView.java
app/src/main/java/com/charles/crazyguy/util/: CommonUtil.java  HalfScreenPageHelper.java  LogUtil.java  NavUtil.java  NotificationUtil.java  ToastUtil.java
app/src/main/java/com/charles/crazyguy/widget/: BeautyCircleTouchView.java  CustomLinearGradientDrawable.java  SegmentedProgressBarView.java  VideoView.java
app/src/main/res/drawable/: round_rec_bg.xml
app/src/main/res/layout/: activity_custom_gradient.xml  activity_main.xml  activity_play_video.xml  activity_surface_view.xml  menu_item.xml  video_item.xml
app/src/main/res/values/: dimens.xml  strings.xml  styles.xml
app/src/test/java/com/charles/crazyguy/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
